# machine-learning-playground

./: .gitignore  README.md  pyproject.toml
autoencoder/mnist/: CLASSIFIER_RESULTS.md  LATENT_EXPLORATION_GUIDE.md  README.md  __init__.py  classifier.py  classifier_data.py  data.py  inference.py  latent_exploration.ipynb  model.py  test_shapes.py  train.py  train_classifier.py  training.ipynb  utils.py
autoencoder/mnist/vae/: APP_README.md  README.md  __init__.py  app.py  compare_with_ae.py  inference.py  model.py  requirements.txt  test_model.py  train.py
diffusion/: Untitled.ipynb  flowers_diffusion.ipynb  noise_scheduler_demo.ipynb  readme.md  utils.py
resnet/: README.md  Untitled.ipynb  data.py  model.py  package_data.py  training.ipynb  utils.py
swiglu/: swiglu.ipynb  swiglu.py
transformers/: moe.py
